toolkit/perfsonar-toolkit/etc/perfsonar_firewall_settings.conf
# Allow Loopback
-A perfSONAR -i lo -j ACCEPT

# Accept existing and related connections
-A perfSONAR -m state --state ESTABLISHED,RELATED -j ACCEPT

# Incoming SSH - TCP Port 22
-A perfSONAR -m state --state NEW,ESTABLISHED -m tcp -p tcp --dport 22 -j ACCEPT

# Incoming NTP - UDP Port 123
-A perfSONAR -p udp --dport 123 -m udp -j ACCEPT 

# DHCPv6
-A perfSONAR -m state --state NEW -m udp -p udp --dport 546 --sport 547 -j ACCEPT


# =-=-=-=-=-=- perfSONAR Measurement Tools: data  =-=-=-=-=-=-

# Rules for BWCTL and OWAMP are taken directly from their own config files.
# They shouldn't be replicated here.

# UDP Traceroute (Incoming)
-A perfSONAR -m udp -p udp --dport 33434:33634 -j ACCEPT

# iperf3 (TCP)
-A perfSONAR -m state --state NEW -m tcp -p tcp --dport 5201 -j ACCEPT

# iperf3 (UDP)
-A perfSONAR -m udp -p udp --dport 5201 -j ACCEPT

# iperf2 (TCP)
-A perfSONAR -m state --state NEW -m tcp -p tcp --dport 5001 -j ACCEPT

# iperf2 (UDP)
-A perfSONAR -m udp -p udp --dport 5001 -j ACCEPT

# nuttcp (TCP)
-A perfSONAR -m state --state NEW -m tcp -p tcp --dport 5000 -j ACCEPT
-A perfSONAR -m state --state NEW -m tcp -p tcp --dport 5101 -j ACCEPT

# nuttcp (UDP)
-A perfSONAR -m udp -p udp --dport 5000 -j ACCEPT
-A perfSONAR -m udp -p udp --dport 5101 -j ACCEPT

# simplestream (TCP)
-A perfSONAR -m state --state NEW -m tcp -p tcp --dport 5890-5900 -j ACCEPT

# qperf
-A perfSONAR -m state --state NEW -m tcp -p tcp --dport 20000-20001 -j ACCEPT
-A perfSONAR -m udp -p udp --dport 20000-20001 -j ACCEPT

# =-=-=-=-=-=- perfSONAR Measurement Tools: control =-=-=-=-=-=-

# OWAMP Control (Incoming)
-A perfSONAR -m state --state NEW -m tcp -p tcp --dport 861 -j ACCEPT  

# TWAMP Control (Incoming)
-A perfSONAR -m state --state NEW -m tcp -p tcp --dport 862 -j ACCEPT

# =-=-=-=-=-=- Core perfSONAR Services =-=-=-=-=-=-

# Incoming Web (esmond and Toolkit GUI) - TCP Ports 80 and 443
-A perfSONAR -m state --state NEW -m tcp -p tcp --dport 443 -j ACCEPT
